# hj2-api-parser

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/api/: import.rs  index.rs  mod.rs
src/utils/: mod.rs  parse_xmlhotelleriejobs.rs
xsd-schemas/: xml-hotelleriejobs.xsd
