[package]
name = "hj2-api-xml-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
libxml = "0.3.5"
log = "0.4.27"
